lijst toegevoegd en gestyled

--- a/GitHub_test.html
+++ b/GitHub_test.html
@@ -5,6 +5,14 @@
     <title>GitHub Test</title>
 </head>
 <body>
-
+    <h1>wat een prachtige pagina</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque commodi eius maiores non pariatur quia sit tempore unde voluptatem!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad beatae consequuntur dignissimos dolores dolorum ea facere ipsa sapiente tempora.</p>
+<ul>
+    <li>item1</li>
+    <li>item2</li>
+    <li>item3</li>
+    <li>item4</li>
+</ul>
 </body>
 </html>
